force-app/main/default/objects/Request_Approval_Step__c/Request_Approval_Step__c.object-meta.xml
<CustomObject>
    <label>Request Approval Step</label>
    <nameField>
        <label>Request Approval Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Approval Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>