force-app/main/default/objects/Request_Approval_Step__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Step</label>
    <referenceTo>Approval_Step__c</referenceTo>
    <relationshipLabel>Request Approval Steps</relationshipLabel>
    <relationshipName>Request_Approval_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>