force-app/main/default/objects/Request_Approval_Step__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Request Approval Steps</relationshipLabel>
    <relationshipName>Request_Approval_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>