force-app/main/default/objects/Request_Approval_Step__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Request Approval Steps</relationshipLabel>
    <relationshipName>Request_Approval_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>