force-app/main/default/objects/Request_Approval_Step__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Request Approval Steps</relationshipLabel>
    <relationshipName>Request_Approval_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>